--- a/arigato/css/main.css
+++ b/arigato/css/main.css
@@ -586,42 +586,107 @@ header {
       -o-transition: background-color 0.3s;
       transition: background-color 0.3s; }
 
-.catalog-presentation .catalog-presentation-wrapper {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-  -webkit-align-content: center;
-      -ms-flex-line-pack: center;
-          align-content: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  height: 720px;
-  overflow: hidden; }
-  .catalog-presentation .catalog-presentation-wrapper .item {
-    width: 33.33%;
-    height: 50%;
-    position: relative;
+.catalog-presentation {
+  padding: 0;
+  margin-bottom: 150px; }
+  .catalog-presentation .catalog-presentation-wrapper {
+    height: 750px;
     overflow: hidden; }
-    .catalog-presentation .catalog-presentation-wrapper .item img {
-      width: 100%;
-      height: auto;
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      -webkit-transform: translate(-50%, -50%);
-          -ms-transform: translate(-50%, -50%);
-              transform: translate(-50%, -50%); }
+    .catalog-presentation .catalog-presentation-wrapper .item {
+      display: block;
+      float: left;
+      width: 25%;
+      height: 50%;
+      position: relative;
+      overflow: hidden; }
+      .catalog-presentation .catalog-presentation-wrapper .item .descr-content {
+        padding: 20px;
+        position: absolute;
+        width: 280px;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+        height: auto;
+        background: #fff;
+        -webkit-border-radius: 10px;
+                border-radius: 10px;
+        left: 50%;
+        top: 50%;
+        -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+        color: #4a4a4a;
+        opacity: 0;
+        -webkit-transition: 0.5s opacity;
+        -o-transition: 0.5s opacity;
+        transition: 0.5s opacity; }
+        .catalog-presentation .catalog-presentation-wrapper .item .descr-content .description {
+          display: none; }
+        .catalog-presentation .catalog-presentation-wrapper .item .descr-content .title {
+          font-size: 20px;
+          margin-bottom: 20px;
+          font-weight: bold;
+          color: #4a4a4a; }
+      .catalog-presentation .catalog-presentation-wrapper .item .current-price {
+        font-size: 16px;
+        font-weight: bold;
+        color: #4a4a4a; }
+      .catalog-presentation .catalog-presentation-wrapper .item img {
+        width: 100%;
+        height: auto;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%); }
+      .catalog-presentation .catalog-presentation-wrapper .item:first-child {
+        float: right;
+        width: 50%;
+        height: 100%;
+        clear: right; }
+      .catalog-presentation .catalog-presentation-wrapper .item .btn-cart {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        height: 45px;
+        width: 45px;
+        background: #D0011B;
+        display: block;
+        -webkit-border-radius: 50%;
+                border-radius: 50%;
+        position: absolute;
+        -webkit-transition: background 0.3s;
+        -o-transition: background 0.3s;
+        transition: background 0.3s;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-align-content: center;
+            -ms-flex-line-pack: center;
+                align-content: center;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+            -ms-flex-pack: center;
+                justify-content: center; }
+        .catalog-presentation .catalog-presentation-wrapper .item .btn-cart i {
+          display: inline-block;
+          font-size: 15px;
+          color: #fff; }
+        .catalog-presentation .catalog-presentation-wrapper .item .btn-cart:hover {
+          background: #840111;
+          -webkit-transition: background 0.3s;
+          -o-transition: background 0.3s;
+          transition: background 0.3s; }
+      .catalog-presentation .catalog-presentation-wrapper .item:hover .descr-content {
+        opacity: 1;
+        -webkit-transition: 0.5s opacity;
+        -o-transition: 0.5s opacity;
+        transition: 0.5s opacity; }
 
 .link-section {
   position: relative;
