--- a/arigato/css/main.css
+++ b/arigato/css/main.css
@@ -186,11 +186,29 @@ table {
     text-align: left;
     vertical-align: middle; }
 
+@font-face {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/Nunito-Regular.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/Nunito-Bold.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 900;
+  src: url("../fonts/Nunito-ExtraBold.ttf") format("truetype"); }
+
 html {
   overflow-x: hidden !important; }
 
 body {
-  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-family: "Nunito", sans-serif !important;
   overflow-x: hidden; }
 
 a {
@@ -229,7 +247,6 @@ header {
   top: 0;
   left: 0;
   background: transparent;
-  border-bottom: solid 1px rgba(151, 151, 151, 0.2);
   z-index: 99999999; }
   header .container {
     height: 50px;
@@ -274,22 +291,20 @@ header {
             -ms-flex-align: center;
                 align-items: center; }
         header .container nav ul li {
-          margin-right: 30px; }
+          margin-right: 35px; }
           header .container nav ul li a {
+            font-family: "Nunito", sans-serif !important;
             line-height: 60px;
             color: #fff;
-            font-size: 13px;
-            font-weight: 400;
-            letter-spacing: 1px; }
-            header .container nav ul li a i {
-              display: inline-block;
-              margin-left: 10px;
-              color: #D0011B; }
+            font-size: 12px;
+            font-weight: 700;
+            letter-spacing: 1px;
+            text-transform: uppercase; }
       header .container nav #slide-line {
         position: absolute;
-        bottom: -1px;
+        bottom: 5px;
         left: 20px;
-        height: 1px;
+        height: 2px;
         background-color: #D0011B;
         -webkit-transition: all .3s ease;
         -o-transition: all .3s ease;
@@ -322,36 +337,99 @@ header {
                 border-radius: 50%; }
 
 .intro-section {
-  position: relative;
+  height: 92vh;
   padding: 0;
   padding-top: 60px;
   margin-top: -60px;
+  margin-bottom: 100px;
   -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  border: 1px solid #4A4A4A; }
+          box-sizing: content-box; }
+  .intro-section .item-info {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    -webkit-transform: translate(-50%, 50%);
+        -ms-transform: translate(-50%, 50%);
+            transform: translate(-50%, 50%);
+    width: 80% !important;
+    height: 120px;
+    max-width: 1000px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-align-content: center;
+        -ms-flex-line-pack: center;
+            align-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 20%;
+    padding: 25px 40px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    background: #fff;
+    z-index: 9999999; }
+    .intro-section .item-info .col {
+      font-size: 36px;
+      font-weight: 900;
+      letter-spacing: 2.1px;
+      color: #4a4a4a;
+      height: 55px; }
+      .intro-section .item-info .col span {
+        font-size: 18px;
+        letter-spacing: 1px;
+        display: block;
+        margin-bottom: 25px; }
   .intro-section .slick-slider {
     position: absolute;
     width: 100%;
-    height: 100%; }
+    height: 92vh;
+    overflow: hidden;
+    -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+            transform: rotate(180deg); }
     .intro-section .slick-slider .slide {
       width: 104% !important;
-      height: 760px;
+      height: 92vh;
       z-index: 1;
       overflow: hidden;
       position: relative;
       left: -2%; }
+      .intro-section .slick-slider .slide .slide-content {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        -webkit-transform: rotate(-180deg);
+            -ms-transform: rotate(-180deg);
+                transform: rotate(-180deg); }
       .intro-section .slick-slider .slide .heading {
-        margin: 0 auto;
-        font-family: 'Raleway', sans-serif;
-        font-size: 90px;
+        position: absolute;
+        left: 50%;
+        top: 25%;
+        -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+        text-transform: uppercase;
+        font-family: "Nunito", sans-serif !important;
+        font-size: 60px;
         color: #fff;
         display: -webkit-box;
         display: -webkit-flex;
         display: -ms-flexbox;
         display: flex;
         width: 100%;
-        margin-top: 200px;
-        font-weight: bold;
+        font-weight: 900;
         z-index: 3;
         height: 120px;
         -webkit-box-orient: horizontal;
@@ -383,9 +461,9 @@ header {
             right: -1000px;
             bottom: 0;
             text-align: right;
-            -webkit-transition: 0.2s ease-in-out right;
-            -o-transition: 0.2s ease-in-out right;
-            transition: 0.2s ease-in-out right;
+            -webkit-transition: 0.3s ease-in-out right;
+            -o-transition: 0.3s ease-in-out right;
+            transition: 0.3s ease-in-out right;
             z-index: 3; }
         .intro-section .slick-slider .slide .heading .right {
           height: 100%;
@@ -399,18 +477,22 @@ header {
             position: absolute;
             left: -1000px;
             bottom: 0;
-            -webkit-transition: 0.2s ease-in-out left;
-            -o-transition: 0.2s ease-in-out left;
-            transition: 0.2s ease-in-out left;
+            -webkit-transition: 0.3s ease-in-out left;
+            -o-transition: 0.3s ease-in-out left;
+            transition: 0.3s ease-in-out left;
             z-index: 3; }
-      .intro-section .slick-slider .slide .img-full {
+      .intro-section .slick-slider .slide .img {
         position: absolute;
-        height: 100%;
-        width: 100%;
-        top: 0;
-        left: 0;
-        overflow: hidden; }
-        .intro-section .slick-slider .slide .img-full img {
+        height: 350px;
+        width: 350px;
+        top: 60%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+        overflow: hidden;
+        opacity: 0; }
+        .intro-section .slick-slider .slide .img img {
           height: auto;
           width: 100%;
           position: absolute;
@@ -419,57 +501,6 @@ header {
           -webkit-transform: translate(-50%, -50%);
               -ms-transform: translate(-50%, -50%);
                   transform: translate(-50%, -50%); }
-      .intro-section .slick-slider .slide .item-info {
-        opacity: 0;
-        position: absolute;
-        bottom: 100px;
-        left: 50%;
-        -webkit-transform: translateX(-50%);
-            -ms-transform: translateX(-50%);
-                transform: translateX(-50%);
-        width: 80% !important;
-        height: 95px;
-        max-width: 820px;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-            -ms-flex-align: center;
-                align-items: center;
-        -webkit-align-content: center;
-            -ms-flex-line-pack: center;
-                align-content: center;
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: row;
-            -ms-flex-direction: row;
-                flex-direction: row;
-        -webkit-box-pack: justify;
-        -webkit-justify-content: space-between;
-            -ms-flex-pack: justify;
-                justify-content: space-between;
-        width: 20%;
-        padding: 25px;
-        -webkit-box-sizing: border-box;
-                box-sizing: border-box;
-        background: #fff;
-        z-index: 9999999;
-        -webkit-transition: opacity 0.3s;
-        -o-transition: opacity 0.3s;
-        transition: opacity 0.3s; }
-        .intro-section .slick-slider .slide .item-info .col {
-          font-size: 36px;
-          font-weight: 900;
-          letter-spacing: 2.1px;
-          color: #4a4a4a;
-          height: 55px; }
-          .intro-section .slick-slider .slide .item-info .col span {
-            font-size: 18px;
-            letter-spacing: 1px;
-            display: block;
-            margin-bottom: 25px; }
       .intro-section .slick-slider .slide.slick-current .left span {
         right: 10%;
         -webkit-transition: 0.5s ease-in-out right;
@@ -486,14 +517,20 @@ header {
         -webkit-transition-delay: 1s;
              -o-transition-delay: 1s;
                 transition-delay: 1s; }
-      .intro-section .slick-slider .slide.slick-current .item-info {
+      .intro-section .slick-slider .slide.slick-current .img {
         opacity: 1;
-        -webkit-transition: 2s opacity;
-        -o-transition: 2s opacity;
-        transition: 2s opacity;
+        -webkit-transition: 0.5s opacity;
+        -o-transition: 0.5s opacity;
+        transition: 0.5s opacity;
         -webkit-transition-delay: 1s;
              -o-transition-delay: 1s;
                 transition-delay: 1s; }
+    .intro-section .slick-slider .slide-1 {
+      background-color: #EB8C24; }
+    .intro-section .slick-slider .slide-2 {
+      background-color: #94C44D; }
+    .intro-section .slick-slider .slide-3 {
+      background-color: #EA5A5A; }
 
 .live-section {
   padding: 0; }
@@ -528,7 +565,7 @@ header {
           -ms-transform: translateY(-50%);
               transform: translateY(-50%); }
       .live-section .live-menu ul li {
-        font-family: 'Raleway', sans-serif;
+        font-family: 'Nunito', sans-serif;
         height: 60px;
         width: 100%;
         padding: 10px;
@@ -712,6 +749,7 @@ header {
         height: 25%;
         width: 60%; }
         .link-section a:first-child .descr h3 {
+          font-weight: 700;
           font-size: 38px;
           margin-bottom: 10px; }
         .link-section a:first-child .descr p {
@@ -763,6 +801,7 @@ header {
           -ms-flex-pack: center;
               justify-content: center; }
       .link-section a .descr h3 {
+        font-weight: 700;
         font-size: 28px;
         margin-bottom: 10px; }
       .link-section a .descr p {
@@ -932,6 +971,7 @@ header {
           -ms-transform: translate(40%, 35%);
               transform: translate(40%, 35%); }
     .catalog-section .filter-side h6 {
+      font-weight: 700;
       margin-bottom: 25px;
       letter-spacing: 1px;
       font-size: 12px;
