--- a/arigato/css/main.css
+++ b/arigato/css/main.css
@@ -225,7 +225,9 @@ a {
   max-width: 1140px;
   width: 100%;
   padding: 0 15px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
   @media (max-width: 1023px) {
     .container {
       padding: 0 24px; } }
@@ -247,40 +249,66 @@ header {
   top: 0;
   left: 0;
   background: transparent;
-  z-index: 99999999; }
+  z-index: 99999999;
+  -webkit-transition: 1s top, 1s position;
+  -o-transition: 1s top, 1s position;
+  transition: 1s top, 1s position; }
   header.fixed {
     position: fixed;
+    top: 0;
     background: #fff;
     -webkit-box-shadow: 4px 0 8px rgba(0, 0, 0, 0.1);
-            box-shadow: 4px 0 8px rgba(0, 0, 0, 0.1); }
+            box-shadow: 4px 0 8px rgba(0, 0, 0, 0.1);
+    -webkit-transition: 1s top, 1s position;
+    -o-transition: 1s top, 1s position;
+    transition: 1s top, 1s position; }
+    header.fixed .container {
+      position: relative; }
     header.fixed ul li a {
       color: #343538 !important; }
-    header.fixed .cart-icon {
-      margin-top: 25px; }
+    header.fixed .cart-icon i {
+      color: #4a4a4a; }
   header .container {
     height: 50px;
     padding-top: 15px;
     position: relative; }
     header .container #logo {
-      margin-top: 10px;
+      position: absolute;
+      left: 0;
+      top: 25px;
       height: 40px;
       display: inline-block;
       float: left;
       font-size: 29px;
       color: #D0011B;
       font-weight: 900;
-      font-family: 'Nunito', sans-serif; }
+      font-family: 'Nunito', sans-serif;
+      z-index: 99999999; }
     header .container nav {
       position: absolute;
-      height: 50px;
-      min-width: 520px;
-      margin: 0 auto;
-      text-align: center;
       left: 50%;
       -webkit-transform: translateX(-50%);
           -ms-transform: translateX(-50%);
-              transform: translateX(-50%); }
-      header .container nav ul {
+              transform: translateX(-50%);
+      height: 50px;
+      width: 100%;
+      margin: 0 auto;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-align-content: center;
+          -ms-flex-line-pack: center;
+              align-content: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+      header .container nav .main-nav {
         height: 100%;
         position: relative;
         display: -webkit-box;
@@ -299,9 +327,9 @@ header {
         -webkit-align-items: center;
             -ms-flex-align: center;
                 align-items: center; }
-        header .container nav ul li {
+        header .container nav .main-nav li {
           margin-right: 35px; }
-          header .container nav ul li a {
+          header .container nav .main-nav li a {
             font-family: "Nunito", sans-serif !important;
             line-height: 60px;
             color: #fff;
@@ -318,18 +346,50 @@ header {
         -webkit-transition: all .3s ease;
         -o-transition: all .3s ease;
         transition: all .3s ease; }
+    header .container .phone {
+      display: inline-block;
+      max-width: 150px;
+      position: absolute;
+      bottom: 2px;
+      right: 25%;
+      -webkit-transform: translateX(100%);
+          -ms-transform: translateX(100%);
+              transform: translateX(100%);
+      z-index: 99999999; }
+      header .container .phone a {
+        font-size: 14px;
+        font-weight: 700;
+        color: #fff;
+        -webkit-transition: 0.5s color;
+        -o-transition: 0.5s color;
+        transition: 0.5s color; }
+        header .container .phone a i {
+          margin-right: 10px; }
+        header .container .phone a:hover {
+          color: #D0011B;
+          -webkit-transition: 0.5s color;
+          -o-transition: 0.5s color;
+          transition: 0.5s color; }
     header .container .cart-icon {
       position: absolute;
-      height: 40px;
-      width: 40px;
-      right: 40px;
-      bottom: 0;
+      height: 30px;
+      width: 30px;
+      right: 20px;
+      top: 50%;
+      -webkit-transform: translateY(0%);
+          -ms-transform: translateY(0%);
+              transform: translateY(0%);
       color: #fff;
-      display: inline-block;
-      margin-top: 10px; }
+      display: inline-block; }
       header .container .cart-icon i {
         font-size: 19px;
-        line-height: 25px; }
+        line-height: 25px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        -webkit-transform: translate(-100%, -50%);
+            -ms-transform: translate(-100%, -50%);
+                transform: translate(-100%, -50%); }
       header .container .cart-icon .items-in-bag {
         display: inline-block;
         height: 20px;
@@ -408,6 +468,50 @@ header {
         letter-spacing: 1px;
         display: block;
         margin-bottom: 25px; }
+  .intro-section .container {
+    height: 92vh;
+    position: relative; }
+  .intro-section .social-intro {
+    height: 90px;
+    width: 30px;
+    position: absolute;
+    right: 30px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+    z-index: 9999999;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-align-content: center;
+        -ms-flex-line-pack: center;
+            align-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    .intro-section .social-intro li a {
+      color: #fff;
+      font-size: 20px;
+      -webkit-transition: 0.3s color;
+      -o-transition: 0.3s color;
+      transition: 0.3s color; }
+      .intro-section .social-intro li a:hover {
+        color: #D0011B;
+        -webkit-transition: 0.3s color;
+        -o-transition: 0.3s color;
+        transition: 0.3s color; }
   .intro-section .slick-slider {
     position: absolute;
     width: 100%;
@@ -550,104 +654,113 @@ header {
       background-color: #EA5A5A; }
 
 .live-section {
-  padding: 0; }
-  .live-section .live-wrapper {
-    margin: 0 auto;
-    position: relative;
-    overflow: hidden;
-    height: 100%;
-    width: 150%;
-    left: 0;
-    -webkit-transition: left 1s;
-    -o-transition: left 1s;
-    transition: left 1s; }
-    .live-section .live-wrapper.play {
-      left: -45%;
-      -webkit-transition: left 1s;
-      -o-transition: left 1s;
-      transition: left 1s; }
-  .live-section .live-menu {
-    position: absolute;
-    left: 0;
-    width: 30%;
-    height: 100%;
-    background: #fff; }
-    .live-section .live-menu ul {
-      height: 200px;
-      width: 500px;
-      position: absolute;
-      right: 30px;
-      top: 50%;
-      -webkit-transform: translateY(-50%);
-          -ms-transform: translateY(-50%);
-              transform: translateY(-50%); }
-      .live-section .live-menu ul li {
-        font-family: 'Nunito', sans-serif;
-        height: 60px;
-        width: 100%;
-        padding: 10px;
-        font-size: 54px;
-        color: #415167;
-        font-weight: 700;
-        cursor: pointer;
-        line-height: 60px;
-        text-align: left;
-        -webkit-transition: color 0.3s, background-color 0.3s;
-        -o-transition: color 0.3s, background-color 0.3s;
-        transition: color 0.3s, background-color 0.3s; }
-        .live-section .live-menu ul li:hover {
-          background: #D0011B;
-          color: #fff;
-          -webkit-transition: color 0.3s, background-color 0.3s;
-          -o-transition: color 0.3s, background-color 0.3s;
-          transition: color 0.3s, background-color 0.3s; }
+  padding: 0;
+  /*.live-wrapper{
+		margin: 0 auto;
+		position: relative;
+		overflow: hidden;
+		height: 100%;
+		width: 100%;
+		left: 0;
+		transition: left 1s;
+
+		&.play {
+			left: -45%;
+			transition: left 1s;
+		}
+	}	
+
+	
+
+	.live-menu {
+		position: absolute;
+		left: 0;
+		width: 30%;
+		height: 100%;
+		background: #fff;
+
+		ul {
+			height: 200px;
+			width: 500px;
+			position: absolute;
+			right: 30px;
+			top: 50%;
+			transform: translateY(-50%);
+
+			li {
+				font-family: 'Nunito', sans-serif;
+				height: 60px;
+				width: 100%;
+				padding: 10px;
+				font-size: 54px;
+				color: #415167;
+				font-weight: 700;
+				cursor: pointer;
+				line-height: 60px;
+				text-align: left;
+				transition: color 0.3s, background-color 0.3s;
+
+				&:hover {
+					background: $red-arigato;
+					color: #fff;
+					transition: color 0.3s, background-color 0.3s; 
+				}
+			}
+		}
+	}
+	.live-video {
+		position: absolute;
+		left: 30%;
+		width: 100%;
+		height: 100%;
+		background: url('../img/video-bg.jpg') no-repeat center center;
+		background-size: cover; 
+	}
+
+	.play-button {
+		position: absolute;
+		left: 0%;
+		height: 90px;
+		width: 90px;
+		margin-left: -45px;
+		bottom: 150px;
+		background-color: rgba(208, 2, 27, 0.36);
+		border-radius: 50%;
+		cursor: pointer;
+		transition: background-color 0.3s;
+		z-index: 99999;
+
+		i {
+			font-size: 18px;
+			line-height: 20px;
+			color: #343538;
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%,-50%)
+		}
+
+		&:hover {
+			background-color: rgba(208, 2, 27, 0.5);
+			transition: background-color 0.3s;
+		}
+	}*/ }
   .live-section .live-video {
-    position: absolute;
-    left: 30%;
     width: 100%;
     height: 100%;
-    background: url("../img/video-bg.jpg") no-repeat center center;
-    -webkit-background-size: cover;
-            background-size: cover; }
-  .live-section .play-button {
-    position: absolute;
-    left: 0%;
-    height: 90px;
-    width: 90px;
-    margin-left: -45px;
-    bottom: 150px;
-    background-color: rgba(208, 2, 27, 0.36);
-    -webkit-border-radius: 50%;
-            border-radius: 50%;
-    cursor: pointer;
-    -webkit-transition: background-color 0.3s;
-    -o-transition: background-color 0.3s;
-    transition: background-color 0.3s;
-    z-index: 99999; }
-    .live-section .play-button i {
-      font-size: 18px;
-      line-height: 20px;
-      color: #343538;
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      -webkit-transform: translate(-50%, -50%);
-          -ms-transform: translate(-50%, -50%);
-              transform: translate(-50%, -50%); }
-    .live-section .play-button:hover {
-      background-color: rgba(208, 2, 27, 0.5);
-      -webkit-transition: background-color 0.3s;
-      -o-transition: background-color 0.3s;
-      transition: background-color 0.3s; }
+    max-width: 1110px;
+    margin: 0 auto;
+    overflow: hidden;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5); }
 
 .catalog-presentation {
   padding: 0;
-  margin-top: 100px;
-  margin-bottom: 100px; }
+  margin-top: 100px; }
   .catalog-presentation .catalog-presentation-wrapper {
-    height: 750px;
-    overflow: hidden;
-    padding: 1%; }
+    width: 100%;
+    height: 520px;
+    overflow: hidden; }
     .catalog-presentation .catalog-presentation-wrapper .item {
       display: block;
       float: left;
@@ -661,36 +774,33 @@ header {
       -webkit-border-radius: 6px;
               border-radius: 6px; }
       .catalog-presentation .catalog-presentation-wrapper .item .descr-content {
-        padding: 20px;
+        padding: 30px;
         position: absolute;
-        width: 280px;
+        width: 100%;
         -webkit-box-sizing: border-box;
                 box-sizing: border-box;
         height: auto;
-        background: #fff;
-        -webkit-border-radius: 6px;
-                border-radius: 6px;
+        background: rgba(0, 0, 0, 0.5);
         left: 50%;
-        top: 50%;
-        -webkit-transform: translate(-50%, -50%);
-            -ms-transform: translate(-50%, -50%);
-                transform: translate(-50%, -50%);
-        color: #4a4a4a;
-        opacity: 0;
-        -webkit-transition: 0.5s opacity;
-        -o-transition: 0.5s opacity;
-        transition: 0.5s opacity; }
+        bottom: -80%;
+        -webkit-transform: translateX(-50%);
+            -ms-transform: translateX(-50%);
+                transform: translateX(-50%);
+        color: #fff;
+        -webkit-transition: 0.5s bottom;
+        -o-transition: 0.5s bottom;
+        transition: 0.5s bottom; }
         .catalog-presentation .catalog-presentation-wrapper .item .descr-content .description {
           display: none; }
         .catalog-presentation .catalog-presentation-wrapper .item .descr-content .title {
           font-size: 20px;
           margin-bottom: 20px;
           font-weight: bold;
-          color: #4a4a4a; }
+          color: #fff; }
       .catalog-presentation .catalog-presentation-wrapper .item .current-price {
         font-size: 16px;
         font-weight: bold;
-        color: #4a4a4a; }
+        color: #fff; }
       .catalog-presentation .catalog-presentation-wrapper .item .item-img {
         height: 100%;
         width: 100px; }
@@ -747,10 +857,10 @@ header {
           -o-transition: background 0.3s;
           transition: background 0.3s; }
       .catalog-presentation .catalog-presentation-wrapper .item:hover .descr-content {
-        opacity: 1;
-        -webkit-transition: 0.5s opacity;
-        -o-transition: 0.5s opacity;
-        transition: 0.5s opacity; }
+        bottom: 0;
+        -webkit-transition: 0.5s bottom;
+        -o-transition: 0.5s bottom;
+        transition: 0.5s bottom; }
 
 .link-section {
   position: relative;
