--- a/arigato/css/main.css
+++ b/arigato/css/main.css
@@ -755,12 +755,17 @@ header {
             box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5); }
 
 .catalog-presentation {
-  padding: 0;
-  margin-top: 100px; }
+  padding: 0; }
   .catalog-presentation .catalog-presentation-wrapper {
     width: 100%;
     height: 520px;
-    overflow: hidden; }
+    overflow: hidden;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); }
     .catalog-presentation .catalog-presentation-wrapper .item {
       display: block;
       float: left;
@@ -963,7 +968,7 @@ header {
   .catalog-section .container {
     position: relative; }
   .catalog-section .filter-top {
-    width: 85%;
+    width: 75%;
     float: right;
     height: 70px;
     position: relative; }
@@ -1016,9 +1021,8 @@ header {
             color: #fff; }
   .catalog-section .filter-side {
     float: left;
-    width: 15%;
+    width: 22%;
     height: 500px;
-    padding-left: 30px;
     -webkit-box-sizing: border-box;
             box-sizing: border-box; }
     .catalog-section .filter-side input[type='checkbox'] {
@@ -1071,7 +1075,7 @@ header {
     .catalog-section .filter-side .filter-block {
       margin-bottom: 60px; }
     .catalog-section .filter-side .range-price {
-      width: 96%; }
+      width: 88%; }
       .catalog-section .filter-side .range-price .label {
         font-size: 14px;
         font-weight: bold;
@@ -1113,7 +1117,7 @@ header {
       font-size: 12px; }
   .catalog-section .catalog-container {
     float: right;
-    width: 85%;
+    width: 78%;
     height: 100%;
     position: relative; }
     .catalog-section .catalog-container .items-container {
