--- a/arigato/css/main.css
+++ b/arigato/css/main.css
@@ -844,7 +844,7 @@ header {
                   box-shadow: 0 30px 100px 0 rgba(0, 0, 0, 0.3);
           -webkit-border-radius: 50%;
                   border-radius: 50%;
-          background: #222; }
+          background: transparent; }
     .intro-section .slick-slider .slide-1 {
       background-color: #EB8C24; }
     .intro-section .slick-slider .slide-2 {
@@ -1245,6 +1245,9 @@ header {
   position: relative;
   height: 580px;
   padding: 0; }
+  .delivery-section .anchor {
+    position: absolute;
+    top: -100px; }
   .delivery-section .heading {
     margin-bottom: 45px; }
   .delivery-section .container {
@@ -1253,7 +1256,11 @@ header {
     width: 50%;
     height: 100%;
     float: left; }
+    .delivery-section .svg-content img {
+      width: 90%;
+      height: auto; }
   .delivery-section .text-content {
+    margin-top: 80px;
     display: inline-block;
     width: 49%;
     text-align: left;
